@@ -1,3 +1,9 @@
+2012-05-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclIO.h (SYNTHETIC_EVENT_TIME): Factored out the definition
+	of the amount of time that should be waited before firing a synthetic
+	event on a channel.
+
 2012-05-25  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinDde.c:    [Bug 473946]: special characters not correctly sent,
